dhall/tests/type-errors/unit/AssertDoubleZeros.txt
Type error: error: AssertMismatch
 --> <current file>:1:0
  |
1 | assert : -0.0 ≡ +0.0
  | ^^^^^^^^^^^^^^^^^^^^ AssertMismatch
  |
